# wplace-archiver

./: .gitignore  IMPLEMENTATION_NOTES.md  README.md  WPLACE_ARCHIVER_SPEC.md  benchmark_wplace_decompress.py  download_tiles.py  extract_artworks.py  inspect_p_transparency.py  inspect_png_modes.py  main.py  pyproject.toml  wplace_archiver.py  wplace_archiver.toml  wplace_compose_disk.py  wplace_store_probe.py
wplace_archiver/: __init__.py  apply.py  benchmark.py  cli.py  compression.py  config.py  decompress.py  diagnostics.py  download.py  errors.py  export.py  github.py  ingest.py  palette.py  pipeline.py  png_codec.py  records.py  self_test.py  shard_store.py  split_assets.py  state.py  store_codec.py  utils.py  validation.py
