[project]
name = "wplace-archiver-v2"
version = "0.4.0"
description = "Rolling sparse palette-index archive pipeline for wplace releases"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9",
  "numpy>=1.26",
  "Pillow>=12.2.0",
  "tqdm>=4.66",
  "backports.zstd; python_version < '3.14'",
]

[project.optional-dependencies]
fast = [
  "isal>=1.7",
  "pyspng>=0.1.2",
  "fpng-py>=0.0.3",
]
zstd = [
  "backports.zstd; python_version < '3.14'",
]

[project.scripts]
wplace-archiver = "wplace_archiver.cli:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
namespaces = false
include = [
  "wplace_xyz*",
  "wplace_sparse_store*",
]
exclude = [
  "wplace_downloads*",
]